# pyfwf_db

./: .env  .gitignore  .pylintrc  README.md  README.rst  build.bat  build_ext.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  todos.md
fwf_db/: __init__.py  fwf_base_mixin.py  fwf_base_view.py  fwf_cython.py  fwf_cython_filter.py  fwf_cython_index.py  fwf_cython_unique_index.py  fwf_file.py  fwf_index_like.py  fwf_index_np_based.py  fwf_index_view.py  fwf_line.py  fwf_mem_optimized_index.py  fwf_merge_index.py  fwf_merge_unique_index.py  fwf_multi_file.py  fwf_multi_file_index.py  fwf_multi_subset.py  fwf_multi_view.py  fwf_operator.py  fwf_pandas.py  fwf_region.py  fwf_simple_index.py  fwf_simple_unique_index.py  fwf_slice_view.py  fwf_subset.py  fwf_table.py  fwf_unique.py  fwf_unique_np_based.py  fwf_view.py  fwf_view_like.py  fwf_view_mixin.py
fwf_db/cython/: build.bat  fwf_db_ext.pyx  hello.c  hello.cp38-win_amd64.pyd  hello.html  hello.pyx  setup.py
fwf_dbv2/: __init__.py  fwf_file.py  fwf_index_like.py  fwf_multi_file.py  fwf_region.py  fwf_simple_index.py  fwf_subset.py  fwf_view_like.py
sample_data/: humans-subset.txt  humans.txt  intro.ipynb
src/fwf_db/: __init__.py  _fwf_db_ext.pyx  fwf_base_mixin.py  fwf_cython.py  fwf_cython_index.py  (+26 more)
src/fwf_db.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: 01_fwf_db_cython_test.py  01_fwf_dict_test.py  01_fwf_lists.py  02_fwf_line_test.py  04_fwf_fieldspecs_test.py  04_fwf_file_test.py  05_pandas_test.py  06_index_test.py  07_mem_optimized_index_test.py  08_mem_optimized_index_test.py  08_multi_file_test.py  09_multi_file_test.py  11_fwf_db_cython_test.py  12_fwf_line_test.py  13_operator_test.py  14_fwf_fieldspecs_test.py  15_fwf_file_test.py  16_index_test.py  17_pandas_test.py  18_mem_optimized_index_test.py  19_multi_file_test.py  fwf_memory_profile.py  memory_profile_fwf.py  performance_eval.py  performance_eval_fwf.py  test_cython.py  test_filespec_finder.py  test_fwf_line.py  test_fwf_table.py  test_fwf_table_v2.py  test_index.py  test_mem_optimized_index.py  test_memory_profile.py  test_multi_file.py  test_operator.py  test_pandas.py  test_performance.py  test_unique.py  xx_test_memory_profile.py  xx_test_performance.py
(+27 files in other folders)
