[bdist_wheel]
# This flag says that the code is written to work with Python 3 only.
python-tag=py3

[metadata]
name = fwf_db
# version = attr: fwf_db.version
version = 0.1.0
license = MIT License
license_files = LICENSE.txt
author = Juergen Donnerstag
author_email = juergen.donnerstag@gmail.com
description = Fixed-width-field File Format DB-like tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fixed width, files, database, read-only
url = https://github.com/jdonnerstag/pyfwf_db

project_urls =
    # Documentation = https://msgpack-python.readthedocs.io/
    Source = https://github.com/jdonnerstag/pyfwf_db
    Tracker = https://github.com/jdonnerstag/pyfwf_db/issues

classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
