
[build_ext]
inplace = 1

[options]
requires_python = >=3.7, <4
install_requires =
    numpy
    deprecated
    prettytable
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    Cython
    tox
    check-manifest
    pandas
    memory_profiler

[metadata]
name = pyfwf_db
description = Fast fixed-width-fields File Format NOSQL-like access
url = https://github.com/jdonnerstag/pyfwf_db
author = Juergen Donnerstag
author_email = juergen.donnerstag@gmail.com
keywords =
    fixed width
    file
    parser
    database
    nosql
    read-only
